[gd_scene load_steps=37 format=2]

[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/thumbnail2.0.png" type="Texture" id=1]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/thumbnail1.1.png" type="Texture" id=2]
[ext_resource path="res://Assets/UIElements/Icon_Tube.png" type="Texture" id=3]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Large_Red_Square.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/background/hbpart.png" type="Texture" id=5]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/thumbnail2.png" type="Texture" id=6]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Large_Red_Rounded.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/thumbnail3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Fonts/fredoka-one/FredokaOne-Regular.otf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/Images/thumbnail3.1.png" type="Texture" id=12]
[ext_resource path="res://Assets/UIIcons/Icon_Small_Blank_X.png" type="Texture" id=13]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/Musikantahan.webm" type="VideoStream" id=14]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Large_Red_Circle.png" type="Texture" id=15]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/Writing-Letters.webm" type="VideoStream" id=16]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/AlphabetSong/AlphaSong.gd" type="Script" id=17]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Small_Orange_Circle.png" type="Texture" id=18]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Small_Orange_Rounded.png" type="Texture" id=19]
[ext_resource path="res://Assets/UIIcons/Icon_Large_Audio_Blank.png" type="Texture" id=20]
[ext_resource path="res://Assets/UIIcons/Icon_Large_Audio_Grey.png" type="Texture" id=21]
[ext_resource path="res://Assets/UIIcons/Icon_Large_AudioOff_Blank.png" type="Texture" id=22]
[ext_resource path="res://Assets/UIIcons/Icon_Large_AudioOff_Grey.png" type="Texture" id=23]
[ext_resource path="res://Assets/Fonts/Hussar-Print-A/HussarPrintMC.otf" type="DynamicFontData" id=24]
[ext_resource path="res://Assets/UIElements/Icon_Add.png" type="Texture" id=25]
[ext_resource path="res://Assets/GUI/Item2.png" type="Texture" id=26]
[ext_resource path="res://Assets/GUI/Icon_Minus.png" type="Texture" id=27]
[ext_resource path="res://Assets/Audio/Music/Tropical-Music - Alexander Blu.mp3" type="AudioStream" id=28]

[sub_resource type="DynamicFont" id=5]
size = 65
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
extra_spacing_char = -3
font_data = ExtResource( 9 )
fallback/0 = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 65
use_filter = true
extra_spacing_char = -3
font_data = ExtResource( 9 )
fallback/0 = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=7]
size = 55
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 55
outline_size = 2
outline_color = Color( 0.203922, 0.152941, 0.156863, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 1528, 346 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 24 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="alphabet" type="Label" parent="NinePatchRect"]
anchor_left = 0.108398
anchor_top = 0.0433333
anchor_right = 0.912109
anchor_bottom = 0.168333
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 5 )
text = "Aralin Natin 'to!"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="alphabet" type="Label" parent="NinePatchRect/alphabet"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 6 )
text = "Aralin Natin 'to!"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="GoBackButton" type="TextureButton" parent="."]
unique_name_in_owner = true
anchor_left = 0.0195313
anchor_top = 0.035
anchor_right = 0.0908203
anchor_bottom = 0.155
margin_left = 918.0
margin_top = -7.0
margin_right = 918.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="pressedX" type="TextureRect" parent="GoBackButton"]
anchor_left = 0.191781
anchor_top = 0.180556
anchor_right = 0.794521
anchor_bottom = 0.777778
texture = ExtResource( 13 )
expand = true
flip_h = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="firstVideo" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.0771484
anchor_top = 0.178333
anchor_right = 0.353516
anchor_bottom = 0.943333
margin_bottom = 3.05176e-05
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="firstVideo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="3rdbg" type="TextureRect" parent="firstVideo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pagbigkas" type="TextureButton" parent="firstVideo/Panel"]
anchor_left = 0.233215
anchor_top = 0.346406
anchor_right = 0.61484
anchor_bottom = 0.575164
margin_right = 1.52588e-05
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="firstVideo/Panel"]
anchor_left = -0.0282681
anchor_top = 0.54902
anchor_right = 1.03534
anchor_bottom = 0.725491
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 7 )
text = "Pagbigkas"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="firstVideo/Panel"]
anchor_top = 0.555556
anchor_right = 1.0
anchor_bottom = 0.71024
custom_colors/font_color = Color( 0.886275, 0.603922, 0.266667, 1 )
custom_colors/font_color_shadow = Color( 0.690196, 0.223529, 0.188235, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 8 )
text = "Pagbigkas"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="secondVideo" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.374023
anchor_top = 0.18
anchor_right = 0.650391
anchor_bottom = 0.945
margin_bottom = 3.05176e-05
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="secondVideo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="2ndBG" type="TextureRect" parent="secondVideo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pagsulat" type="TextureButton" parent="secondVideo/Panel"]
anchor_left = 0.34629
anchor_top = 0.339869
anchor_right = 0.727915
anchor_bottom = 0.568627
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="secondVideo/Panel"]
anchor_left = -0.0282681
anchor_top = 0.54902
anchor_right = 1.03534
anchor_bottom = 0.725491
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 7 )
text = "Pagsulat"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="secondVideo/Panel"]
anchor_top = 0.555556
anchor_right = 1.0
anchor_bottom = 0.71024
custom_colors/font_color = Color( 0.886275, 0.603922, 0.266667, 1 )
custom_colors/font_color_shadow = Color( 0.690196, 0.223529, 0.188235, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 8 )
text = "Pagsulat"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="thirdVideo" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.673828
anchor_top = 0.178333
anchor_right = 0.950195
anchor_bottom = 0.943333
margin_bottom = 3.05176e-05
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="thirdVideo"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="TextureRect" parent="thirdVideo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pagawit" type="TextureButton" parent="thirdVideo/Panel"]
anchor_left = 0.318022
anchor_top = 0.357299
anchor_right = 0.699647
anchor_bottom = 0.586057
margin_bottom = 1.52588e-05
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="thirdVideo/Panel"]
anchor_left = -0.0282681
anchor_top = 0.54902
anchor_right = 1.03534
anchor_bottom = 0.725491
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 7 )
text = "Pag-awit"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="thirdVideo/Panel"]
anchor_top = 0.555556
anchor_right = 1.0
anchor_bottom = 0.71024
custom_colors/font_color = Color( 0.886275, 0.603922, 0.266667, 1 )
custom_colors/font_color_shadow = Color( 0.690196, 0.223529, 0.188235, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 8 )
text = "Pag-awit"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Pagsulat" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.0136719
anchor_top = 0.0233333
anchor_right = 0.984375
anchor_bottom = 0.976667
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Pagsulat"]
anchor_left = -0.0100604
anchor_top = -0.0174825
anchor_right = 1.01207
anchor_bottom = 1.01923
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="VPpagsulat" type="VideoPlayer" parent="Pagsulat/Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 16 )
bus = "Voices"
__meta__ = {
"_edit_lock_": true
}

[node name="curtain0" type="TextureRect" parent="Pagsulat/Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="PlayVPagsulat" type="TextureButton" parent="Pagsulat/Panel"]
unique_name_in_owner = true
anchor_left = 0.399142
anchor_top = 0.357278
anchor_right = 0.549356
anchor_bottom = 0.604915
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exitPagsulat" type="TextureButton" parent="Pagsulat"]
anchor_left = 0.944668
anchor_top = -0.0174825
anchor_right = 1.01207
anchor_bottom = 0.0961538
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exit" type="TextureRect" parent="Pagsulat/exitPagsulat"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 11.0
margin_right = -10.0
margin_bottom = -12.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Mute" type="TextureButton" parent="Pagsulat"]
unique_name_in_owner = true
margin_left = -4.0
margin_top = 500.0
margin_right = 57.0
margin_bottom = 583.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="UnMute" type="TextureButton" parent="Pagsulat"]
unique_name_in_owner = true
visible = false
margin_left = -10.0
margin_top = 500.0
margin_right = 63.0
margin_bottom = 583.0
toggle_mode = true
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Pagawit" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.0136719
anchor_top = 0.0233333
anchor_right = 0.985352
anchor_bottom = 0.976667
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Pagawit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -10.0
margin_right = 9.99957
margin_bottom = 9.99982
__meta__ = {
"_edit_lock_": true
}

[node name="VPpagawit" type="VideoPlayer" parent="Pagawit/Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 14 )
bus = "Voices"
__meta__ = {
"_edit_lock_": true
}

[node name="curtain1" type="TextureRect" parent="Pagawit/Panel"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="PlayVPagawit" type="TextureButton" parent="Pagawit/Panel"]
unique_name_in_owner = true
anchor_left = 0.399142
anchor_top = 0.357278
anchor_right = 0.549356
anchor_bottom = 0.604915
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="exitPagawit" type="TextureButton" parent="Pagawit"]
anchor_left = 0.953768
anchor_top = -0.0174825
anchor_right = 1.01005
anchor_bottom = 0.0769231
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Volume" type="TextureButton" parent="Pagawit"]
unique_name_in_owner = true
margin_left = -11.0
margin_top = 518.0
margin_right = 48.0
margin_bottom = 582.0
texture_normal = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Volume2" type="TextureButton" parent="Pagawit"]
unique_name_in_owner = true
visible = false
margin_left = -11.0
margin_top = 518.0
margin_right = 48.0
margin_bottom = 582.0
texture_normal = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel2" type="Panel" parent="Pagawit"]
unique_name_in_owner = true
visible = false
margin_left = 52.0
margin_top = 525.0
margin_right = 201.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="plus" type="TextureButton" parent="Pagawit/Panel2"]
anchor_left = 0.0201342
anchor_top = 0.137255
anchor_right = 0.264037
anchor_bottom = 0.839009
margin_right = -0.341465
margin_bottom = 0.210526
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 25 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Pagawit/Panel2"]
unique_name_in_owner = true
anchor_left = 0.275168
anchor_top = 0.0588235
anchor_right = 0.731544
anchor_bottom = 0.882353
custom_fonts/font = SubResource( 12 )
text = "00"
align = 1
valign = 2
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="minus" type="TextureButton" parent="Pagawit/Panel2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -17.5
margin_right = -3.0
margin_bottom = 18.5
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 27 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="alphTheme" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 28 )
bus = "Music"

[connection signal="visibility_changed" from="." to="." method="_on_Control_visibility_changed"]
[connection signal="pressed" from="GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="firstVideo/Panel/Pagbigkas" to="." method="_on_Pagbigkas_pressed"]
[connection signal="pressed" from="secondVideo/Panel/Pagsulat" to="." method="_on_Pagsulat_pressed"]
[connection signal="pressed" from="thirdVideo/Panel/Pagawit" to="." method="_on_Pagawit_pressed"]
[connection signal="finished" from="Pagsulat/Panel/VPpagsulat" to="." method="_on_VPpagsulat_finished"]
[connection signal="button_down" from="Pagsulat/Panel/PlayVPagsulat" to="." method="_on_PlayVPagsulat_button_down"]
[connection signal="pressed" from="Pagsulat/exitPagsulat" to="." method="_on_exitPagsulat_pressed"]
[connection signal="pressed" from="Pagsulat/Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="Pagsulat/UnMute" to="." method="_on_UnMute_pressed"]
[connection signal="finished" from="Pagawit/Panel/VPpagawit" to="." method="_on_VPpagawit_finished"]
[connection signal="button_down" from="Pagawit/Panel/PlayVPagawit" to="." method="_on_PlayVPagawit_button_down"]
[connection signal="pressed" from="Pagawit/exitPagawit" to="." method="_on_exitPagawit_pressed"]
[connection signal="pressed" from="Pagawit/Volume" to="." method="_on_Volume_pressed"]
[connection signal="pressed" from="Pagawit/Volume2" to="." method="_on_Volume2_pressed"]
[connection signal="pressed" from="Pagawit/Panel2/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="Pagawit/Panel2/minus" to="." method="_on_minus_pressed"]
